; ModuleID = '/home/carl/AnghaBench/ish/fs/extr_mount.c_sys_umount2.c'
source_filename = "/home/carl/AnghaBench/ish/fs/extr_mount.c_sys_umount2.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@MAX_PATH = common dso_local global i32 0, align 4
@_EFAULT = common dso_local global i32 0, align 4
@AT_PWD = common dso_local global i32 0, align 4
@UMOUNT_NOFOLLOW_ = common dso_local global i32 0, align 4
@N_SYMLINK_NOFOLLOW = common dso_local global i32 0, align 4
@N_SYMLINK_FOLLOW = common dso_local global i32 0, align 4
@mounts_lock = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @sys_umount2(i32 %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca i8*, align 8
  %7 = alloca i64, align 8
  %8 = alloca i32, align 4
  %9 = alloca i64, align 8
  %10 = alloca i32, align 4
  store i32 %0, i32* %4, align 4
  store i32 %1, i32* %5, align 4
  %11 = load i32, i32* @MAX_PATH, align 4
  %12 = zext i32 %11 to i64
  %13 = call i8* @llvm.stacksave()
  store i8* %13, i8** %6, align 8
  %14 = alloca i8, i64 %12, align 16
  store i64 %12, i64* %7, align 8
  %15 = load i32, i32* %4, align 4
  %16 = trunc i64 %12 to i32
  %17 = call i64 @user_read_string(i32 %15, i8* %14, i32 %16)
  %18 = icmp ne i64 %17, 0
  br i1 %18, label %19, label %21

19:                                               ; preds = %2
  %20 = load i32, i32* @_EFAULT, align 4
  store i32 %20, i32* %3, align 4
  store i32 1, i32* %8, align 4
  br label %46

21:                                               ; preds = %2
  %22 = load i32, i32* @MAX_PATH, align 4
  %23 = zext i32 %22 to i64
  %24 = alloca i8, i64 %23, align 16
  store i64 %23, i64* %9, align 8
  %25 = load i32, i32* @AT_PWD, align 4
  %26 = load i32, i32* %5, align 4
  %27 = load i32, i32* @UMOUNT_NOFOLLOW_, align 4
  %28 = and i32 %26, %27
  %29 = icmp ne i32 %28, 0
  br i1 %29, label %30, label %32

30:                                               ; preds = %21
  %31 = load i32, i32* @N_SYMLINK_NOFOLLOW, align 4
  br label %34

32:                                               ; preds = %21
  %33 = load i32, i32* @N_SYMLINK_FOLLOW, align 4
  br label %34

34:                                               ; preds = %32, %30
  %35 = phi i32 [ %31, %30 ], [ %33, %32 ]
  %36 = call i32 @path_normalize(i32 %25, i8* %14, i8* %24, i32 %35)
  store i32 %36, i32* %10, align 4
  %37 = load i32, i32* %10, align 4
  %38 = icmp slt i32 %37, 0
  br i1 %38, label %39, label %41

39:                                               ; preds = %34
  %40 = load i32, i32* %10, align 4
  store i32 %40, i32* %3, align 4
  store i32 1, i32* %8, align 4
  br label %46

41:                                               ; preds = %34
  %42 = call i32 @lock(i32* @mounts_lock)
  %43 = call i32 @do_umount(i8* %24)
  store i32 %43, i32* %10, align 4
  %44 = call i32 @unlock(i32* @mounts_lock)
  %45 = load i32, i32* %10, align 4
  store i32 %45, i32* %3, align 4
  store i32 1, i32* %8, align 4
  br label %46

46:                                               ; preds = %41, %39, %19
  %47 = load i8*, i8** %6, align 8
  call void @llvm.stackrestore(i8* %47)
  %48 = load i32, i32* %3, align 4
  ret i32 %48
}

; Function Attrs: nounwind
declare i8* @llvm.stacksave() #1

declare dso_local i64 @user_read_string(i32, i8*, i32) #2

declare dso_local i32 @path_normalize(i32, i8*, i8*, i32) #2

declare dso_local i32 @lock(i32*) #2

declare dso_local i32 @do_umount(i8*) #2

declare dso_local i32 @unlock(i32*) #2

; Function Attrs: nounwind
declare void @llvm.stackrestore(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
